# SoLyP

./: .gitignore  AGENTS.md  CMakeLists.txt  COLORS.md  HISTORY.md  ROADMAP.md  SUMMARY.md  ТЗ Плагина VST суфлёра текстов (субтитры).md
Documents/SoLyP/themes/: dark.json
Source/: Display.cpp  Display.h  Logic.cpp  Logic.h  PluginEditor.cpp  PluginEditor.h  PluginEditorHelpers.cpp  PluginEditorHelpers.h  PluginProcessor.cpp  PluginProcessor.h  Slot.h
Source/Data/: I18n.cpp  I18n.h  SettingsManager.cpp  SettingsManager.h  Song.cpp  Song.h
Source/Midi/: MidiManager.cpp  MidiManager.h
Source/Standalone/: StandaloneMain.cpp
Source/UI/: ControlsPanel.cpp  ControlsPanel.h  LeftPanel.cpp  LeftPanel.h  SaveDialogComponent.cpp  SaveDialogComponent.h  SettingsCard.cpp  SettingsCard.h  SettingsComponent.cpp  SettingsComponent.h  Theme.cpp  Theme.h
Source/UI/Display/: DisplayActions.cpp  DisplayCallbacks.cpp  DisplayHelpers.cpp  DisplayHelpers.h
Source/UI/Editor/: EditorActions.cpp  EditorCallbacks.cpp  EditorHelpers.cpp
Source/UI/icons/: Icons.h
langs/: en.json  ru.json
